Обновлены описания настроек на всех языках

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,25 +1,25 @@
 [mod-setting-name]
-UMModulesRework-SpeedModule-StartSpeed=Speed module: speed
-UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=Speed module: speed multiplier
-UMModulesRework-SpeedModule-ConsumptionPenalty=Speed module: efficiency penalty
-UMModulesRework-SpeedModule-StartConsumption=Speed module: efficiency penalty
-UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=Speed module: efficiency penalty multiplier
-UMModulesRework-EffectivityModule-StartConsumptionBonus=Efficiency module: efficiency
-UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=Efficiency module: efficiency multiplier
-UMModulesRework-EffectivityModule-PollutionBonus=Efficiency module: pollution bonus
-UMModulesRework-EffectivityModule-StartPollutionBonus=Efficiency module: pollution bonus
-UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=Efficiency module: pollution bonus multiplier
-UMModulesRework-ProductivityModule-StartProductivity=Productivity module: productivity
-UMModulesRework-ProductivityModule-ProductivityMultiplierPerLevel=Productivity module: productivity multiplier
-UMModulesRework-ProductivityModule-ConsumptionPenalty=Productivity module: efficiency penalty
-UMModulesRework-ProductivityModule-StartConsumption=Productivity module: efficiency penalty
-UMModulesRework-ProductivityModule-ConsumptionMultiplierPerLevel=Productivity module: efficiency penalty multiplier
-UMModulesRework-ProductivityModule-SpeedPenalty=Productivity module: speed penalty
-UMModulesRework-ProductivityModule-StartSpeedPenalty=Productivity module: speed penalty
-UMModulesRework-ProductivityModule-SpeedPenaltyMultiplierPerLevel=Productivity module: speed penalty multiplier
-UMModulesRework-ProductivityModule-PollutionPenalty=Productivity module: pollution penalty
-UMModulesRework-ProductivityModule-StartPollutionPenalty=Productivity module: pollution penalty
-UMModulesRework-ProductivityModule-PollutionPenaltyMultiplierPerLevel=Productivity module: pollution penalty multiplier
+UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] Speed
+UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=[item=speed-module] Speed multiplier
+UMModulesRework-SpeedModule-ConsumptionPenalty=[item=speed-module] Consumption penalty
+UMModulesRework-SpeedModule-StartConsumption=[item=speed-module] Consumption penalty
+UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Consumption penalty multiplier
+UMModulesRework-EffectivityModule-StartConsumptionBonus=[item=effectivity-module] Effectivity
+UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Efficiency multiplier
+UMModulesRework-EffectivityModule-PollutionBonus=[item=effectivity-module] Pollution bonus
+UMModulesRework-EffectivityModule-StartPollutionBonus=[item=effectivity-module] Pollution bonus
+UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=[item=effectivity-module] Pollution bonus multiplier
+UMModulesRework-ProductivityModule-StartProductivity=[item=productivity-module] Productivity
+UMModulesRework-ProductivityModule-ProductivityMultiplierPerLevel=[item=productivity-module] Productivity multiplier
+UMModulesRework-ProductivityModule-ConsumptionPenalty=[item=productivity-module] Consumption penalty
+UMModulesRework-ProductivityModule-StartConsumption=[item=productivity-module] Consumption penalty
+UMModulesRework-ProductivityModule-ConsumptionMultiplierPerLevel=[item=productivity-module] Consumption penalty multiplier
+UMModulesRework-ProductivityModule-SpeedPenalty=[item=productivity-module] Speed penalty
+UMModulesRework-ProductivityModule-StartSpeedPenalty=[item=productivity-module] Speed penalty
+UMModulesRework-ProductivityModule-SpeedPenaltyMultiplierPerLevel=[item=productivity-module] Speed penalty multiplier
+UMModulesRework-ProductivityModule-PollutionPenalty=[item=productivity-module] Pollution penalty
+UMModulesRework-ProductivityModule-StartPollutionPenalty=[item=productivity-module] Pollution penalty
+UMModulesRework-ProductivityModule-PollutionPenaltyMultiplierPerLevel=[item=productivity-module] Pollution penalty multiplier
 UMModulesRework-RoundingTo=Round to
 UMModulesRework-MergedModules=Merged modules
 
