--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -2,27 +2,27 @@
 UMModulesRework=Изменяет систему бонусов от модулей. Теперь бонусы растут в геометрической прогрессии с увеличением уровня. Стартовое значение, множитель и некоторые другие параметры настраеваемы. Поддерживает новые модули из мода RFT-modules.
 
 [mod-setting-name]
-UMModulesRework-SpeedModule-StartSpeed=Модуль скорости: скорость
-UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=Модуль скорости: множитель скорости
-UMModulesRework-SpeedModule-ConsumptionPenalty=Модуль скорости: штраф к эффективности
-UMModulesRework-SpeedModule-StartConsumption=Модуль скорости: штраф к эффективности
-UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=Модуль скорости: множитель штрафа к эффективности
-UMModulesRework-EffectivityModule-StartConsumptionBonus=Модуль эффективности: эффективность
-UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=Модуль эффективности: множитель эффективности
-UMModulesRework-EffectivityModule-PollutionBonus=Модуль эффективности: бонус к загрязнению
-UMModulesRework-EffectivityModule-StartPollutionBonus=Модуль эффективности: бонус к загрязнению
-UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=Модуль эффективности: множитель бонуса к загрязнению
-UMModulesRework-ProductivityModule-StartProductivity=Модуль продуктивности: продуктивность
-UMModulesRework-ProductivityModule-ProductivityMultiplierPerLevel=Модуль продуктивности: множитель продуктивности
-UMModulesRework-ProductivityModule-ConsumptionPenalty=Модуль продуктивности: штраф к эффективности
-UMModulesRework-ProductivityModule-StartConsumption=Модуль продуктивности: штраф к эффективности
-UMModulesRework-ProductivityModule-ConsumptionMultiplierPerLevel=Модуль продуктивности: множитель штрафа к эффективности
-UMModulesRework-ProductivityModule-SpeedPenalty=Модуль продуктивности: штраф к скорости
-UMModulesRework-ProductivityModule-StartSpeedPenalty=Модуль продуктивности: штраф к скорости
-UMModulesRework-ProductivityModule-SpeedPenaltyMultiplierPerLevel=Модуль продуктивности: множитель штрафа к скорости
-UMModulesRework-ProductivityModule-PollutionPenalty=Модуль продуктивности: штраф к загрязнению
-UMModulesRework-ProductivityModule-StartPollutionPenalty=Модуль продуктивности: штраф к загрязнению
-UMModulesRework-ProductivityModule-PollutionPenaltyMultiplierPerLevel=Модуль продуктивности: множитель штрафа к загрязнению
+UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] Скорость
+UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=[item=speed-module] Множитель скорости
+UMModulesRework-SpeedModule-ConsumptionPenalty=[item=speed-module] Штраф к эффективности
+UMModulesRework-SpeedModule-StartConsumption=[item=speed-module] Штраф к эффективности
+UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Множитель штрафа к эффективности
+UMModulesRework-EffectivityModule-StartConsumptionBonus=[item=effectivity-module] Эффективность
+UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Множитель эффективности
+UMModulesRework-EffectivityModule-PollutionBonus=[item=effectivity-module] Бонус к загрязнению
+UMModulesRework-EffectivityModule-StartPollutionBonus=[item=effectivity-module] Бонус к загрязнению
+UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=[item=effectivity-module] Множитель бонуса к загрязнению
+UMModulesRework-ProductivityModule-StartProductivity=[item=productivity-module] Продуктивность
+UMModulesRework-ProductivityModule-ProductivityMultiplierPerLevel=[item=productivity-module] Множитель продуктивности
+UMModulesRework-ProductivityModule-ConsumptionPenalty=[item=productivity-module] Штраф к эффективности
+UMModulesRework-ProductivityModule-StartConsumption=[item=productivity-module] Штраф к эффективности
+UMModulesRework-ProductivityModule-ConsumptionMultiplierPerLevel=[item=productivity-module] Множитель штрафа к эффективности
+UMModulesRework-ProductivityModule-SpeedPenalty=[item=productivity-module] Штраф к скорости
+UMModulesRework-ProductivityModule-StartSpeedPenalty=[item=productivity-module] Штраф к скорости
+UMModulesRework-ProductivityModule-SpeedPenaltyMultiplierPerLevel=[item=productivity-module] Множитель штрафа к скорости
+UMModulesRework-ProductivityModule-PollutionPenalty=[item=productivity-module] Штраф к загрязнению
+UMModulesRework-ProductivityModule-StartPollutionPenalty=[item=productivity-module] Штраф к загрязнению
+UMModulesRework-ProductivityModule-PollutionPenaltyMultiplierPerLevel=[item=productivity-module] Множитель штрафа к загрязнению
 UMModulesRework-RoundingTo=Округлять до
 UMModulesRework-MergedModules=Спаренные модули
 
