Исправлена опечатка в английской локализации

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -5,7 +5,7 @@ UMModulesRework-SpeedModule-ConsumptionPenalty=[item=speed-module] Consumption p
 UMModulesRework-SpeedModule-StartConsumption=[item=speed-module] Consumption penalty
 UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Consumption penalty multiplier
 UMModulesRework-EffectivityModule-StartConsumptionBonus=[item=effectivity-module] Effectivity
-UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Efficiency multiplier
+UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Effectivity multiplier
 UMModulesRework-EffectivityModule-PollutionBonus=[item=effectivity-module] Pollution bonus
 UMModulesRework-EffectivityModule-StartPollutionBonus=[item=effectivity-module] Pollution bonus
 UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=[item=effectivity-module] Pollution bonus multiplier
