Обновлено описание мода

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -1,5 +1,5 @@
 [mod-description]
-UMModulesRework=Изменяет систему бонусов от модулей. Теперь бонусы растут в геометрической прогрессии с увеличением уровня. Стартовое значение, множитель и некоторые другие параметры настраеваемы. Поддерживает новые модули из мода RFT-modules.
+UMModulesRework=Изменяет систему бонусов от модулей. Теперь бонусы растут в геометрической прогрессии с увеличением уровня (бонус = начальный-бонус * множитель ^ уровень). Начальный бонус, множитель и некоторые другие параметры настраиваемы.\nПоддерживаемые моды:\n-Space Exploration\n-RFT-modules\n-Tier 4 Modules\n-Любые другие моды, не изменяющие ванильную систему модулей
 
 [mod-setting-name]
 UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] Скорость
