--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,3 +1,6 @@
+[mod-description]
+UMModulesRework=Rework module bonuses. Now the bonuses of the modules grow exponentially with increasing levels (bonus = initial-bonus * multiplier ^ tier). The initial bonus, multiptiers and sme other parameters are configurable.\nSupported mods:\n-Space Exploration\n-RFT-modules\n-Tier 4 Modules\n-Any other mods that do not modify vanilla modules
+
 [mod-setting-name]
 UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] Speed
 UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=[item=speed-module] Speed multiplier
