--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,5 @@
 [mod-description]
-UMModulesRework=Rework module bonuses. Now the bonuses of the modules grow exponentially with increasing levels (bonus = initial-bonus * multiplier ^ tier). The initial bonus, multiptiers and sme other parameters are configurable.\nSupported mods:\n-Space Exploration\n-RFT-modules\n-Tier 4 Modules\n-Any other mods that do not modify vanilla modules
+UMModulesRework=Rework module bonuses. Now the bonuses of the modules grow exponentially with increasing levels (bonus = initial bonus * multiplier ^ tier). The initial bonus, multiptiers and sme other parameters are configurable.\n\nSupported mods:\n- Space Exploration\n- RFT-modules\n- Tier 4 Modules\n- Any other mods that do not modify vanilla modules
 
 [mod-setting-name]
 UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] Speed
@@ -7,6 +7,9 @@ UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=[item=speed-module] Speed mu
 UMModulesRework-SpeedModule-ConsumptionPenalty=[item=speed-module] Consumption penalty
 UMModulesRework-SpeedModule-StartConsumption=[item=speed-module] Consumption penalty
 UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Consumption penalty multiplier
+UMModulesRework-SpeedModule-PollutionPenalty=[item=speed-module] Pollution penalty
+UMModulesRework-SpeedModule-StartPollutionPenalty=[item=speed-module] Pollution penalty
+UMModulesRework-SpeedModule-PollutionPenaltyMultiplierPerLevel=[item=speed-module] Pollution penalty multiplier
 UMModulesRework-EffectivityModule-StartConsumptionBonus=[item=effectivity-module] Effectivity
 UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Effectivity multiplier
 UMModulesRework-EffectivityModule-PollutionBonus=[item=effectivity-module] Pollution bonus
