--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -1,5 +1,5 @@
 [mod-description]
-UMModulesRework=Изменяет систему бонусов от модулей. Теперь бонусы растут в геометрической прогрессии с увеличением уровня (бонус = начальный-бонус * множитель ^ уровень). Начальный бонус, множитель и некоторые другие параметры настраиваемы.\nПоддерживаемые моды:\n-Space Exploration\n-RFT-modules\n-Tier 4 Modules\n-Любые другие моды, не изменяющие ванильную систему модулей
+UMModulesRework=Изменяет систему бонусов от модулей. Теперь бонусы растут в геометрической прогрессии с увеличением уровня (бонус = начальный бонус * множитель ^ уровень). Начальный бонус, множитель и некоторые другие параметры настраиваемы.\n\nПоддерживаемые моды:\n- Space Exploration\n- RFT-modules\n- Tier 4 Modules\n- Любые другие моды, не изменяющие ванильную систему модулей
 
 [mod-setting-name]
 UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] Скорость
@@ -7,6 +7,9 @@ UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=[item=speed-module] Множ
 UMModulesRework-SpeedModule-ConsumptionPenalty=[item=speed-module] Штраф к эффективности
 UMModulesRework-SpeedModule-StartConsumption=[item=speed-module] Штраф к эффективности
 UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Множитель штрафа к эффективности
+UMModulesRework-SpeedModule-PollutionPenalty=[item=speed-module] Штраф к загрязнению
+UMModulesRework-SpeedModule-StartPollutionPenalty=[item=speed-module] Штраф к загрязнению
+UMModulesRework-SpeedModule-PollutionPenaltyMultiplierPerLevel=[item=speed-module] Множитель штрафа к загрязнению
 UMModulesRework-EffectivityModule-StartConsumptionBonus=[item=effectivity-module] Эффективность
 UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Множитель эффективности
 UMModulesRework-EffectivityModule-PollutionBonus=[item=effectivity-module] Бонус к загрязнению
@@ -27,26 +30,5 @@ UMModulesRework-RoundingTo=Округлять до
 UMModulesRework-MergedModules=Спаренные модули
 
 [mod-setting-description]
-UMModulesRework-SpeedModule-StartSpeed=Бонус скорости модуля скорости первого уровня
-UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=Множитель, на который умножается бонус скорости модуля скорости с увеличеним уровня
-UMModulesRework-SpeedModule-ConsumptionPenalty=Вкл/Выкл штраф эффективности у модулей скорости
-UMModulesRework-SpeedModule-StartConsumption=Штраф эффективности модуля скорости первого уровня
-UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=Множитель, на который умножается штраф эффективности модуля скорости с увеличеним уровня
-UMModulesRework-EffectivityModule-StartConsumptionBonus=Бонус эффективности модуля эффективности первого уровня
-UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=Множитель, на который умножается бонус эффективности модуля эффективности с увеличеним уровня
-UMModulesRework-EffectivityModule-PollutionBonus=Вкл/Выкл уменьшение загрязнение у модулей эффективности
-UMModulesRework-EffectivityModule-StartPollutionBonus=Уменьшение загрязнение модуля эффективности первого уровня
-UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=Множитель, на который умножается уменьшение загрязнения модуля эффективности с увеличеним уровня
-UMModulesRework-ProductivityModule-StartProductivity=Бонус продуктивности модуля продуктивности первого уровня
-UMModulesRework-ProductivityModule-ProductivityMultiplierPerLevel=Множитель, на который умножается бонус продуктивности модуля продуктивности с увеличеним уровня
-UMModulesRework-ProductivityModule-ConsumptionPenalty=Вкл/Выкл штраф эффективности у модулей продуктивности
-UMModulesRework-ProductivityModule-StartConsumption=Штраф эффективности модуля продуктивности первого уровня
-UMModulesRework-ProductivityModule-ConsumptionMultiplierPerLevel=Множитель, на который умножается штраф эффективности модуля продуктивности с увеличеним уровня
-UMModulesRework-ProductivityModule-SpeedPenalty=Вкл/Выкл штраф скорости у модулей продуктивности
-UMModulesRework-ProductivityModule-StartSpeedPenalty=Штраф скорости модуля продуктивности первого уровня
-UMModulesRework-ProductivityModule-SpeedPenaltyMultiplierPerLevel=Множитель, на который умножается штраф скорости модуля продуктивности с увеличеним уровня
-UMModulesRework-ProductivityModule-PollutionPenalty=Вкл/Выкл штраф увеличение загрязнения у модулей продуктивности
-UMModulesRework-ProductivityModule-StartPollutionPenalty=Увеличение загрязнения модуля продуктивности первого уровня
-UMModulesRework-ProductivityModule-PollutionPenaltyMultiplierPerLevel=Множитель, на который умножается увеличение загрязнения модуля продуктивности с увеличеним уровня
 UMModulesRework-RoundingTo=Округляет значение бонусов до заданного кратного. Если вы хотите, чтобы проценты выглядели аккуратнее
 UMModulesRework-MergedModules=Вкл/Выкл спаренные модули из RFT modules
