Обновление до версии Factorio 2.0

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -10,11 +10,11 @@ UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Co
 UMModulesRework-SpeedModule-PollutionPenalty=[item=speed-module] Pollution penalty
 UMModulesRework-SpeedModule-StartPollutionPenalty=[item=speed-module] Pollution penalty
 UMModulesRework-SpeedModule-PollutionPenaltyMultiplierPerLevel=[item=speed-module] Pollution penalty multiplier
-UMModulesRework-EffectivityModule-StartConsumptionBonus=[item=effectivity-module] Effectivity
-UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Effectivity multiplier
-UMModulesRework-EffectivityModule-PollutionBonus=[item=effectivity-module] Pollution bonus
-UMModulesRework-EffectivityModule-StartPollutionBonus=[item=effectivity-module] Pollution bonus
-UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=[item=effectivity-module] Pollution bonus multiplier
+UMModulesRework-EfficiencyModule-StartConsumptionBonus=[item=efficiency-module] Efficiency
+UMModulesRework-EfficiencyModule-ConsumptionBonusMultiplierPerLevel=[item=efficiency-module] Efficiency multiplier
+UMModulesRework-EfficiencyModule-PollutionBonus=[item=efficiency-module] Pollution bonus
+UMModulesRework-EfficiencyModule-StartPollutionBonus=[item=efficiency-module] Pollution bonus
+UMModulesRework-EfficiencyModule-PollutionBonusMultiplierPerLevel=[item=efficiency-module] Pollution bonus multiplier
 UMModulesRework-ProductivityModule-StartProductivity=[item=productivity-module] Productivity
 UMModulesRework-ProductivityModule-ProductivityMultiplierPerLevel=[item=productivity-module] Productivity multiplier
 UMModulesRework-ProductivityModule-ConsumptionPenalty=[item=productivity-module] Consumption penalty
