--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -10,11 +10,11 @@ UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] М
 UMModulesRework-SpeedModule-PollutionPenalty=[item=speed-module] Штраф к загрязнению
 UMModulesRework-SpeedModule-StartPollutionPenalty=[item=speed-module] Штраф к загрязнению
 UMModulesRework-SpeedModule-PollutionPenaltyMultiplierPerLevel=[item=speed-module] Множитель штрафа к загрязнению
-UMModulesRework-EffectivityModule-StartConsumptionBonus=[item=effectivity-module] Эффективность
-UMModulesRework-EffectivityModule-ConsumptionBonusMultiplierPerLevel=[item=effectivity-module] Множитель эффективности
-UMModulesRework-EffectivityModule-PollutionBonus=[item=effectivity-module] Бонус к загрязнению
-UMModulesRework-EffectivityModule-StartPollutionBonus=[item=effectivity-module] Бонус к загрязнению
-UMModulesRework-EffectivityModule-PollutionBonusMultiplierPerLevel=[item=effectivity-module] Множитель бонуса к загрязнению
+UMModulesRework-EfficiencyModule-StartConsumptionBonus=[item=efficiency-module] Эффективность
+UMModulesRework-EfficiencyModule-ConsumptionBonusMultiplierPerLevel=[item=efficiency-module] Множитель эффективности
+UMModulesRework-EfficiencyModule-PollutionBonus=[item=efficiency-module] Бонус к загрязнению
+UMModulesRework-EfficiencyModule-StartPollutionBonus=[item=efficiency-module] Бонус к загрязнению
+UMModulesRework-EfficiencyModule-PollutionBonusMultiplierPerLevel=[item=efficiency-module] Множитель бонуса к загрязнению
 UMModulesRework-ProductivityModule-StartProductivity=[item=productivity-module] Продуктивность
 UMModulesRework-ProductivityModule-ProductivityMultiplierPerLevel=[item=productivity-module] Множитель продуктивности
 UMModulesRework-ProductivityModule-ConsumptionPenalty=[item=productivity-module] Штраф к эффективности
