Добавлена локализация для новых настроек

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -7,6 +7,9 @@ UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=[item=speed-module] Speed mu
 UMModulesRework-SpeedModule-ConsumptionPenalty=[item=speed-module] Consumption penalty
 UMModulesRework-SpeedModule-StartConsumption=[item=speed-module] Consumption penalty
 UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Consumption penalty multiplier
+UMModulesRework-SpeedModule-QualityPenalty=[item=speed-module] Quality penalty
+UMModulesRework-SpeedModule-StartQualityPenalty=[item=speed-module] Quality penalty
+UMModulesRework-SpeedModule-QualityPenaltyMultiplierPerLevel=[item=speed-module] Quality penalty multiplier
 UMModulesRework-SpeedModule-PollutionPenalty=[item=speed-module] Pollution penalty
 UMModulesRework-SpeedModule-StartPollutionPenalty=[item=speed-module] Pollution penalty
 UMModulesRework-SpeedModule-PollutionPenaltyMultiplierPerLevel=[item=speed-module] Pollution penalty multiplier
@@ -26,9 +29,14 @@ UMModulesRework-ProductivityModule-SpeedPenaltyMultiplierPerLevel=[item=producti
 UMModulesRework-ProductivityModule-PollutionPenalty=[item=productivity-module] Pollution penalty
 UMModulesRework-ProductivityModule-StartPollutionPenalty=[item=productivity-module] Pollution penalty
 UMModulesRework-ProductivityModule-PollutionPenaltyMultiplierPerLevel=[item=productivity-module] Pollution penalty multiplier
+UMModulesRework-QualityModule-StartQuality=[item=quality-module] Quality
+UMModulesRework-QualityModule-QualityMultiplierPerLevel=[item=quality-module] Quality multiplier
+UMModulesRework-QualityModule-SpeedPenalty=[item=quality-module] Speed penalty
+UMModulesRework-QualityModule-StartSpeedPenalty=[item=quality-module] Speed penalty
+UMModulesRework-QualityModule-SpeedPenaltyMultiplierPerLevel=[item=quality-module] Speed penalty multiplier
 UMModulesRework-RoundingTo=Round to
 UMModulesRework-MergedModules=Merged modules
 
 [mod-setting-description]
-UMModulesRework-RoundingTo=Rounds the bonus value to the specified multiple. If you want the percentages to look neater.
+UMModulesRework-RoundingTo=Rounds the bonus value to the specified multiple. If you want the percentages to look neater (for quality, this value will be 10 times less)
 UMModulesRework-MergedModules=Enabled/disabled merged modules from RFT modules
