--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -7,6 +7,9 @@ UMModulesRework-SpeedModule-SpeedMultiplierPerLevel=[item=speed-module] Множ
 UMModulesRework-SpeedModule-ConsumptionPenalty=[item=speed-module] Штраф к эффективности
 UMModulesRework-SpeedModule-StartConsumption=[item=speed-module] Штраф к эффективности
 UMModulesRework-SpeedModule-ConsumptionMultiplierPerLevel=[item=speed-module] Множитель штрафа к эффективности
+UMModulesRework-SpeedModule-QualityPenalty=[item=speed-module] Штраф к качеству
+UMModulesRework-SpeedModule-StartQualityPenalty=[item=speed-module] Штраф к качеству
+UMModulesRework-SpeedModule-QualityPenaltyMultiplierPerLevel=[item=speed-module] Множитель штрафа к качеству
 UMModulesRework-SpeedModule-PollutionPenalty=[item=speed-module] Штраф к загрязнению
 UMModulesRework-SpeedModule-StartPollutionPenalty=[item=speed-module] Штраф к загрязнению
 UMModulesRework-SpeedModule-PollutionPenaltyMultiplierPerLevel=[item=speed-module] Множитель штрафа к загрязнению
@@ -26,9 +29,14 @@ UMModulesRework-ProductivityModule-SpeedPenaltyMultiplierPerLevel=[item=producti
 UMModulesRework-ProductivityModule-PollutionPenalty=[item=productivity-module] Штраф к загрязнению
 UMModulesRework-ProductivityModule-StartPollutionPenalty=[item=productivity-module] Штраф к загрязнению
 UMModulesRework-ProductivityModule-PollutionPenaltyMultiplierPerLevel=[item=productivity-module] Множитель штрафа к загрязнению
+UMModulesRework-QualityModule-StartQuality=[item=quality-module] Качество
+UMModulesRework-QualityModule-QualityMultiplierPerLevel=[item=quality-module] Множитель качества
+UMModulesRework-QualityModule-SpeedPenalty=[item=quality-module] Штраф к скорости
+UMModulesRework-QualityModule-StartSpeedPenalty=[item=quality-module] Штраф к скорости
+UMModulesRework-QualityModule-SpeedPenaltyMultiplierPerLevel=[item=quality-module] Множитель штрафа к скорости
 UMModulesRework-RoundingTo=Округлять до
 UMModulesRework-MergedModules=Спаренные модули
 
 [mod-setting-description]
-UMModulesRework-RoundingTo=Округляет значение бонусов до заданного кратного. Если вы хотите, чтобы проценты выглядели аккуратнее
+UMModulesRework-RoundingTo=Округляет значение бонусов до заданного кратного. Если вы хотите, чтобы проценты выглядели аккуратнее (для качества значение будет в 10 раз меньше)
 UMModulesRework-MergedModules=Вкл/Выкл спаренные модули из RFT modules
