Info: version updated ot 2.3.0

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -1,5 +1,5 @@
 [mod-description]
-UMModulesRework=重做插件加成. 现在, 插件的加成随等级提升指数增长 (加成 = 初始加成 * 倍率 ^ 等级). 初始加成, 倍率以及其他参数都是可配置的.\n\n兼容mods:\n- Space Exploration\n- RFT-modules\n- Tier 4 Modules\n- 其他不改变插件效果的模组
+UMModulesRework=重做插件加成. 现在, 插件的加成随等级提升指数增长 (加成 = 初始加成 * 倍率 ^ 等级). 初始加成, 倍率以及其他参数都是可配置的.\n\n兼容mods:\n- Space Exploration\n- Secretas&Frozeta\n- RFT-modules\n- Tier 4 Modules\n- 其他不改变插件效果的模组
 
 [mod-setting-name]
 UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] 基础速度加成
