--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,5 @@
 [mod-description]
-UMModulesRework=Rework module bonuses. Now the bonuses of the modules grow exponentially with increasing levels (bonus = initial bonus * multiplier ^ tier). The initial bonus, multiptiers and some other parameters are configurable.\n\nSupported mods:\n- Space Exploration\n- Secretas&Frozeta\n- RFT-modules\n- Tier 4 Modules\n- Any other mods that do not modify vanilla modules
+UMModulesRework=Rework module bonuses. Now the bonuses of the modules grow exponentially with increasing levels (bonus = initial bonus * multiplier ^ tier). The initial bonus, multiptiers and some other parameters are configurable.\n\nSupported mods:\n- Space Exploration\n- Secretas&Frozeta\n- RFT-modules\n- Moar Modules\n- Tier 4 Modules\n- Any other mods that do not modify vanilla modules
 
 [mod-setting-name]
 UMModulesRework-SpeedModule-StartSpeed=[item=speed-module] Speed
